src/sdk/.metadata/.plugins/org.eclipse.cdt.ui/montgomery_sw_project_broken2.build.log
11:57:30 **** Incremental Build of configuration Debug for project montgomery_sw_project_broken2 ****
make pre-build main-build 
make[1]: Entering directory `/users/cosic/abeckers/ddp/2016-2017/work-packages/sw/ddp_sw/src/sdk/montgomery_sw_project_broken2/Debug'
a9-linaro-pre-build-step
 
Building file: ../src/main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../helloworld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:65:21: error: unknown type name 'ma'
     init_platform();ma
                     ^
../src/main.c:67:11: error: expected declaration specifiers or '...' before string constant
     print("Hello World\n\r");
           ^
make[1]: *** [src/main.o] Error 1
make[1]: Leaving directory `/users/cosic/abeckers/ddp/2016-2017/work-packages/sw/ddp_sw/src/sdk/montgomery_sw_project_broken2/Debug'

11:57:30 Build Finished (took 63ms)

